# agentic-receipts

./: Cargo.toml  LICENSE  README.md  SECURITY.md
examples/: create_and_verify.rs
src/: error.rs  hashing.rs  lib.rs  receipt.rs  signing.rs  verify.rs
tests/: receipt_tests.rs
